@@ -34,6 +34,7 @@ Version 0.0.4b (in progress)
 * [Improved] Install error message to make it more specific and informative.
 * [Fixed] Handle teams with mulitple owners.
 * [Fixed] Broken stats reset functionality for owner names.
+* [Fixed] Overall, Defensive and Offensive pages now show "No Search Results" message when search results are empty.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
